--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -53,5 +53,13 @@
         android:layout_height="@dimen/sample_button_height"
         android:layout_marginTop="@dimen/sample_button_spacing"
         android:text="@string/sample_custom_view"/>
+
+    <Button
+        android:id="@+id/sample_texture_view"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/sample_button_height"
+        android:layout_marginTop="@dimen/sample_button_spacing"
+        android:text="@string/sample_texture_view"/>
+
   </LinearLayout>
 </ScrollView>
